--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.13.4",
     "lodash": "^4.1.0",
     "mongoose": "^4.3.7",
+    "path": "^0.12.7",
     "request": "^2.69.0"
   }
 }
