--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/rk23/prioritize-travel#readme",
   "dependencies": {
+    "cron": "^1.1.0",
     "express": "^4.13.4",
     "lodash": "^4.1.0",
     "mongoose": "^4.3.7",
+    "nodemailer": "^2.0.0",
     "path": "^0.12.7",
     "request": "^2.69.0"
   }
